--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -10,7 +10,6 @@ a {
 
 h4{
     font-family: "Gruppo", sans-serif;
-
     font-size: 1.2rem;
     font-weight: 700;
     font-style: normal;
@@ -18,7 +17,18 @@ h4{
     
 }
 
+h1{
+    font-family: "Gruppo", sans-serif;
+}
+
+h3 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.2rem;
+    margin-top: 25px;
+}
+
 h4:hover{
     font-weight: 900;
     filter: brightness(150%);
 }
+
