--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,20 +1,6 @@
 body {
     margin: 0;
-    background-color: #252A34;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-
-h4{
-    font-family: "Gruppo", sans-serif;
-    font-size: 1.2rem;
-    font-weight: 700;
-    font-style: normal;
-    color: #08D9D6;
-    
+    background-color: #f1ecec;
 }
 
 h1{
@@ -27,8 +13,22 @@ h3 {
     margin-top: 25px;
 }
 
-h4:hover{
-    font-weight: 900;
-    filter: brightness(150%);
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.flex-row {
+    margin: 1.5rem 0;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.flex-col {
+    margin: 1.5rem, 0;
+    display: flex;
+    flex-direction: column;
 }
 
