--- a/Client/src/Components/HomePage/HomePage.css
+++ b/Client/src/Components/HomePage/HomePage.css
@@ -1,28 +1,159 @@
-
-
-.menu{
+.sub-nav{
+    height: 100vh;
     width: 20%;
-    align-items: start;
+    margin: 2px;
+    border-right: 1px groove black;
+}
+
+.sub-nav-icon {
+    color: black;
+    font-size: 20px;
+}
+
+.sub-nav-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0 2.5rem 1rem;
+    justify-content:center;
+    border-radius: 25px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid black;
+    transition: 0.3s background-color;
+    transition: 0.3s border-color;
+    
+}
+
+.sub-nav-item:hover {
+    background-color: rgb(197, 194, 194); 
+    border-color: blue;
+}
+
+.sub-nav-item h5 {
+    padding: 10px 5px 0;
+    color: rgb(0, 0, 0);
+    font-family: "Montserrat", sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    transition: 0.3s color;
+}
+
+
+.view{
+    height: 100vh;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 5rem;
+}
+
+.top-title{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
     justify-content: left;
-    border: 5px solid blue;
+}
+
+.top-title h4 {
+    margin-left: 0.5rem;
+    font-size: 1.1rem;
+    font-family: "Montserrat", sans-serif;
 }
 
 .post{
-    width: 60%;
-    align-items: center;
-    justify-content: center;
-    margin: 0 6px;
-}
-
-.title{
+    margin: 4px 0;
+    border-radius: 12px;
+    background-color: white;
+    padding: 1.2rem 0;
     display: flex;
     flex-direction: row;
-}
-
-.about{
-    width: 20%;
     align-items: center;
-    justify-content: start;
-    border: 5px solid blue;
+    justify-content: left;
+    cursor: pointer;
 }
 
+.post p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #a09f9f;
+    font-size: 18px;
+    margin-top: 12px;
+}
+
+
+.wall-box {
+    border-radius: 25px;
+    background-color: white;
+    margin-bottom: 20px;
+}
+
+
+.wall-info{
+    display: flex;
+    flex-direction: column;
+}
+
+.wall-info-upper{
+    display: flex;
+    flex-direction: row;
+    align-items: s;
+    justify-content: flex-start;
+}
+
+.wall-info-upper h5 {
+    font-family: "Montserrat", sans-serif;
+    margin: 0 1px;
+    font-size: 18px;
+    font-weight: 800;
+}
+
+.wall-info-upper p {
+    font-family: "Montserrat", sans-serif;
+    margin: 0 2px;
+    font-size: 12px;
+    color: #b4b2b2;
+    font-weight: 500;
+}
+
+.wall-info-lower {
+    display: flex;
+    flex-direction: row;
+    align-items: last baseline;
+    justify-content: flex-start;
+}
+
+.wall-info-lower p {
+    font-family: "Montserrat", sans-serif;
+    margin: 0 2px;
+    font-size: 14px;
+    color: #a09f9f;
+    font-weight: 600;
+
+}
+
+.wall-header {
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    justify-content: left;
+    padding: 20px;
+}
+
+.wall-content {
+    padding: 20px;
+}
+
+.wall-content p {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.profile-picture {
+    background-size: cover;
+    border-radius:50% 50% 50% 50%;
+    width:50px;
+    height:50px;
+    background-color: white;
+    outline: none;
+    margin-right: 5px;
+}
