--- a/Client/src/Constants/Comments/Comments.css
+++ b/Client/src/Constants/Comments/Comments.css
@@ -6,6 +6,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-bottom: 2px;
     font-size: 14px;
+    margin-left: 3px;
 }
 
 .parent-wall {
@@ -20,7 +21,7 @@
     background-color: #3ABEF9;
     color: white;
     padding: 5px 10px;
-    margin-left: 10px;
+    margin-left: 5px;
     border-radius: 25px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -43,7 +44,7 @@
     width: 90%;
     background-color: #f8f8f8;
     border-radius: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     position: relative;
 }
 
@@ -130,14 +131,85 @@
     flex-direction: column;
 }
 
+.rep-btns {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 4px;
+    margin-left: 3px;
+}
+
+.btn-view-replies {
+    border: none;
+    outline: none;
+    border-radius: 10px; 
+    width:fit-content;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    color: #949494;
+    font-weight: 600;
+    font-size: 12px;
+    background-color: #f8f8f8;
+
+}
+
 .btn-rep {
+    background-color: #f8f8f8;
     border: none;
     outline: none;
     margin-left: 30px;
     border-radius: 10px;   
-    width: 10%; 
+    width: fit-content; 
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     color: #949494;
     font-weight: 600;
     font-size: 12px;
 }   
+
+.show-all-comments{
+    background-color: #fff;
+    border: none;
+    outline: none;
+    margin-left: 5px;
+    border-radius: 10px;   
+    width: 15%; 
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    color: #949494;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.comment-user-info {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content:flex-start;
+    margin-top: 2px;
+    
+}
+
+.profile-picture {
+    height: 30px;
+    width: 30px;
+    margin: 5px;
+}
+
+.comment-header {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2px;
+}
+
+.username {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 0;
+}
+
+.extra-info {
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    font-size: 11px;
+    color: #949494;
+    font-weight: 500;
+}
