--- a/Client/src/Components/HomePage/HomePage.css
+++ b/Client/src/Components/HomePage/HomePage.css
@@ -1,41 +1,11 @@
 .sub-nav{
-    height: 100vh;
-    width: 20%;
-    margin: 2px;
+    width: 25%;
+    margin: 5px;
     border-right: 1px groove black;
 }
 
-.sub-nav-icon {
-    color: black;
-    font-size: 20px;
-}
-
-.sub-nav-item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: 0 2.5rem 1rem;
-    justify-content:center;
-    border-radius: 25px;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid black;
-    transition: 0.3s background-color;
-    transition: 0.3s border-color;
-    
-}
-
-.sub-nav-item:hover {
-    background-color: rgb(197, 194, 194); 
-    border-color: blue;
-}
-
-.sub-nav-item h5 {
-    padding: 10px 5px 0;
-    color: rgb(0, 0, 0);
-    font-family: "Montserrat", sans-serif;
-    font-size: 17px;
-    font-weight: 400;
-    transition: 0.3s color;
+.sub-nav-item h4{
+  padding: 20px;
 }
 
 
@@ -363,4 +333,78 @@
       opacity: 1;
     }
   }
-  
+
+
+.sub-nav h3 {
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.category-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.college-category {
+  margin: 10px;
+  border-radius: 15px;
+  overflow-y: auto; /* Add a vertical scrollbar */
+  max-height: 40vh;
+  padding: 0px 30px;
+}
+
+.college-category h4 {
+   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-weight: 500;
+}
+.college-list {
+  display: flex;
+  flex-direction: row;
+  align-items:normal;
+  justify-content: last baseline;
+}
+
+.college-category::-webkit-scrollbar {
+  width: 4px; /* Width of the scrollbar */
+}
+
+.college-category::-webkit-scrollbar-track {
+  position: relative;
+  height: 90%;
+}
+
+.college-category::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the scrollbar thumb */
+  border-radius: 8px; /* Rounded corners for the thumb */
+}
+
+.college-category::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the scrollbar thumb on hover */
+}
+.college-list p{
+    font-family:'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.college-img {
+   height: 20px;
+   width: 20px;
+}
+
+.feature-list{
+  display: flex;
+  flex-direction: row;
+  align-items:last baseline;
+  justify-content: last baseline;
+}
+
+.feature-list p{
+  font-family:'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  cursor: pointer;
+}
